Added Windows build support.